# ansitok

./: .gitlab-ci.yml  Cargo.toml  README.md
.github/workflows/: rust.yml
examples/: parse_ansi.rs  parse_sgr.rs
src/: element.rs  lib.rs
src/parse/: ansi_parser.rs  ansi_sequence.rs  mod.rs  output.rs  parse_escape_sequence.rs  parse_visual_attribute.rs  sgr_parser.rs  visual_attribute.rs
src/parsers/: ansi_sequence_parser.rs  mod.rs  output.rs  sgr_parser.rs
tests/: ansi_sequence.rs  parse_ansi.rs  parse_sgr.rs
